# ConfiguratorPC2

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.portal  MEMORY.md  Procfile  README.md  nixpacks.toml  package-lock.json  package.json  pytest.ini  railway.json  railway.portal.json  requirements.txt  tailwind.config.js
auctions_staging/: .env.example  Dockerfile  FROZEN.md  Makefile  README.md  STAGING.md  docker-compose.yml  pyproject.toml
auctions_staging/_diff_reports/: diff___init__.py.txt  diff_base.py.txt  diff_matching.py.txt  diff_merlion.py.txt  diff_models.py.txt  diff_ocs.py.txt  diff_orchestrator.py.txt  diff_treolan.py.txt  price_loaders_diff_2026-05-08.md
auctions_staging/app/: main.py
auctions_staging/app/core/: auth.py  config.py  (+2 more)
auctions_staging/migrations/: 0001_init.sql  0002_catalog.sql  0003_tenders.sql  0004_matches.sql  0005_statuses.sql  0006_settings.sql  0007_attrs_source.sql  0008_ktru_watchlist_expand.sql  0009_ktru_watchlist_zontics_only.sql
auctions_staging/scripts/: _dump_raw_html.py  enrich_export.py  enrich_import.py  load_price.py  migrate.py  normalize_brands.py  normalize_brands.sql  reparse_cards.py  run_matching.py  sniff_categories.out  sniff_categories.py
auctions_staging/tests/: smoke_card_live.py  smoke_search_live.py  test_attrs_normalizer.py  test_brand_normalizer.py  test_ingest_card_parser.py  test_ingest_filters.py  test_ingest_search_params.py  test_match_aggregator.py  test_match_attribute_rules.py  test_match_name_parser.py  test_matcher.py  test_price_loaders_categorization.py
(+1217 files in other folders)
